# forge

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  schema.sql
.github/workflows/: forge-eval.yml
ci_results/: baseline.json
dashboard/: package-lock.json  package.json  vite.config.js
dashboard/src/: App.jsx  api.js  main.jsx
docs/: architecture.md
docs/design/: forge_dashboard_design.html
forge/: llm_client.py
forge/benchmark/: loader.py  runner.py
forge/capture/: langchain_tracer.py  trajectory.py
forge/metrics/: base.py  config.py  consistency.py  engine.py  hallucination.py  reasoning_coherence.py  recovery_rate.py  result.py  step_efficiency.py  task_completion.py  tool_call_fidelity.py
forge/server/: db.py  main.py  models.py
human_study/: forge_scores_internal.json  rating_form_instructions.md  trajectories_for_rating.json
human_study_small/: forge_scores_internal.json  rating_form_instructions.md  trajectories_for_rating.json
migrations/: 001_add_evaluation_provenance.sql
scripts/: ci_evaluation.py  export_for_human_study.py  generate_research_corpus.py  test_capture.py  test_integration_week2.py  test_integration_week3.py  test_integration_week4.py  test_integration_week5.py  test_llm_client.py  test_task_completion.py  test_trajectory.py  verify_api_health.py  verify_benchmark_dataset.py  verify_benchmark_runner.py  verify_docker_stack.py  verify_fidelity_efficiency.py  verify_storage_roundtrip.py  verify_trajectory_schema.py
(+62 files in other folders)
